fix: fix overflow in invoices page and adjust tasks page

--- a/frontend/src/layouts/styles.css
+++ b/frontend/src/layouts/styles.css
@@ -2,8 +2,12 @@
    display: flex;
 }
 
-main {
+.main-content {
    width: 100%;
    height: 100vh;
+   overflow: auto;
+}
+
+.outlet-container {
    overflow: auto;
 }
